made /reading page a bit prettier on the eyes + added some screenshots

--- a/doqmeat/reading/index.html
+++ b/doqmeat/reading/index.html
@@ -6,7 +6,7 @@
 	<title>reading log</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="doqmeat's reading log">
-	<link rel="icon" type="image/x-icon" href="favicon.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/book.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip -->
@@ -18,24 +18,37 @@
 <body>
 	<main>
 		<h1>reading log</h1>
+		<a title="pixel by bitmapdreams" href="http://lastsecret.net/bitmapdreams" target="_blank"><img src="https://doqmeat.com/!g/deco/crystalgreenhouse_book.gif" style="float:left;"></a>
 		<h2>current</h2>
 		<ul>
 			<li>chainsaw man -- (ongoing)
 				<details>
-					<summary>+</summary>fujimoto going to hell bro. but anyways.
+					<summary></summary>fujimoto going to hell bro. but anyways.
 					<br>
-					<img src="/!g/media/chainsawman-manga/ch1-42-shots (1).jpg">
-					<img src="/!g/media/chainsawman-manga/ch1-42-shots (2).jpg">
-					<img src="/!g/media/chainsawman-manga/ch1-42-shots (3).jpg">
-					<img src="/!g/media/chainsawman-manga/ch1-42-shots (4).jpg">
-					<img src="/!g/media/chainsawman-manga/ch1-42-shots (5).jpg">
-					<img src="/!g/media/chainsawman-manga/ch1-42-shots (6).jpg">
-					<img src="/!g/media/chainsawman-manga/ch1-42-shots (7).jpg">
-					<img src="/!g/media/chainsawman-manga/ch1-42-shots (8).jpg">
-					<img src="/!g/media/chainsawman-manga/ch1-42-shots (9).jpg">
+					<img src="!g/csm/ch1-42-shots (1).jpg" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (2).jpg" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (3).jpg" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (4).jpg" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (5).jpg" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (6).jpg" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (7).jpg" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (8).jpg" alt="chainsaw man panels">
+					<img src="!g/csm/ch1-42-shots (9).jpg" alt="chainsaw man panels">
 				</details>
 			</li>
-			<li>the guy she was interested in wasn't a guy at all -- (ongoing)</li>
+			<li>the guy she was interested in wasn't a guy at all -- (ongoing)
+				<details>
+					<summary></summary>
+					<p>very cute and fun manga to look it though it sure is dragging a lot...</p>
+					<img src="!g/green-yuri/231022-shots (1).jpg" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (2).jpg" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (3).jpg" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (4).jpg" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (5).jpg" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (6).jpg" alt="the guy she was interested in wasn't a guy at all panels">
+					<img src="!g/green-yuri/231022-shots (7).jpg" alt="the guy she was interested in wasn't a guy at all panels">
+				</details>
+			</li>
 			<li>company and private life -- (ongoing)</li>
 		</ul>
 
@@ -49,7 +62,7 @@
 		<ul>
 			<li>villain
 				<details>
-					<summary>+</summary>
+					<summary></summary>
 					<p>idk man that was beautiful.</p>
 					<img src="!g/villain/1.jpg" width="40%" alt="screenshots of villain">
 					<br>
@@ -61,14 +74,24 @@
 			<li>blue</li>
 			<li>look back</li>
 			<li>goodbye, eri</li>
-			<li>our dreams at dusk</li>
+			<li>our dreams at dusk <details>
+					<summary></summary>
+					<br>
+					<img src="!g/our-dreams-at-dusk/dream (1).jpg">
+					<img src="!g/our-dreams-at-dusk/dream (2).jpg">
+				</details>
+			</li>
 			<li>the little prince</li>
 			<li>paper girls</li>
 			<li>the girl from the sea</li>
 			<li>uzumaki</li>
 			<li>remina</li>
 			<li>my lesbian experience with loneliness</li>
-			<li>homestuck</li>
+			<li>homestuck <details>
+					<summary></summary>
+					a very formative piece of media... if you know you know.
+				</details>
+			</li>
 		</ul>
 		<h2>want to read</h2>
 		<ul>
@@ -89,8 +112,11 @@
 			<li>ogi's summer break</li>
 		</ul>
 	</main>
+
 	<footer>
 		<b>last updated: 03.jan.25</b>
+		<br>
+		<b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: gaegu.
 		<br>
 		<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a>
 	</footer>
