fixed some broken files

--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -55,8 +55,8 @@
   </div>
   <img loading="lazy" src="!g/drawings/oyasumi.jpg" alt="inspired by siinamota's oyasumi" class="box watercolor 2023 trad">
   <img loading="lazy" src="!g/drawings/241109-doodles.jpg" alt="an assortment of doodles. they are mostly cats" class="box doodle trad 2024" loading="lazy">
-  <img loading="lazy" class="box trad 2023 doodle" src="/vgs/pikmin-4/doodle1.jpg" alt="when i was sick with covid all i could do was draw oatchi">
-  <img loading="lazy" class="box trad doodle 2023" src="/vgs/pikmin-4/doodle2.jpg" alt="when i was sick with covid all i could do was draw oatchi">
+  <img loading="lazy" class="box trad 2023 doodle" src="/vgs/games/pikmin-4/doodle1.jpg" alt="when i was sick with covid all i could do was draw oatchi">
+  <img loading="lazy" class="box trad doodle 2023" src="/vgs/games/pikmin-4/doodle2.jpg" alt="when i was sick with covid all i could do was draw oatchi">
   <img id="halo" loading="lazy" class="box digital full 2022" src="!g/drawings/halo.png" alt="illustration from siinamota's halo">
   <div id="halo-caption" class="captions">
    <p>inspired by siinamota's PV of <a href="https://www.youtube.com/watch?v=WchOJBb--PU" target="_blank">halo</a></p>
