minor changes to homepage, rss, sitemap

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -48,7 +48,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/journal">journal</a>
 			<a href="/microblog">microblog </a>
 			<a href="/blog">blog</a>
-			<a href="/fashion">fashion <img src="/!g/pix/new1.gif" alt=""></a>
+			<a href="/fashion">fashion</a>
 			<a href="/scrapbook">scrapbook</a>
 			<a href="/shrines">shrines</a>
 			<a href="/collection">collections</a>
@@ -57,21 +57,19 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3 class="media"> media logs</h3>
 			<a href="/music">music</a>
 			<a href="/vgs">video games</a>
-			<a href="/tv">shows</a>
-			<a title="WIP - no CSS" href="/reading">books <img src="!g/pix/caution1.gif" alt="caution symbol"></a>
-			<a href="/october-movies">october movies</a>
+			<a href="/tv">tv <img src="/!g/pix/updated1.gif" alt="updated"></a>
+			<a href="/reading">books <img src="/!g/pix/updated1.gif" alt="updated"></a>
 
 			<h3 class="misc"> misc</h3>
 			<a href="/projects">projects</a>
-			<a href="/masaaki-yuasa">masaaki yuasa watchlist</a>
-			<a href="safe-spot/index.html">safe spot</a>
-			<a href="/faq">FAQ <img src="!g/pix/new1.gif" alt=""></a>
+			<a href="/safe-spot">safe spot</a>
+			<a href="/faq">FAQ</a>
 
 			<h3 class="site"> sitely</h3>
 			<a href="/sites">button wall</a>
 			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"> notebook</a>
 			<a href="/guestbook">guestbook</a>
-			<a href="/sitemap">sitemap</a>
+			<a href="sitemap.html">sitemap</a>
 
 			<h3 class="offsite"> offsite</h3>
 			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"> neocities profile</a>
