--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -44,10 +44,10 @@
 					<p>and then came <i>rebellion</i> and elevated all of this to 100 times. i have watched this movie at least 10 times. i love it so so so much. homura akemi i would die for you.</p>
 					<p>i really can't wait for the 4th movie to come out. it will be fucking insane if it manages to be better than <i>rebellion</i> since i already consider that movie perfect.</p>
 					<h3>screenshots</h3>
-					<img src="!g/madoka-rebellion/rebellion1.jpg" alt="" width="100%">
-					<img src="!g/madoka-rebellion/rebellion2.jpg" alt="" width="100%">
-					<img src="!g/madoka-rebellion/rebellion3.jpg" alt="" width="100%">
-					<img src="!g/madoka-rebellion/rebellion4.jpg" alt="" width="100%">
+					<img src="!g/madoka-rebellion/rebellion1.jpg" alt="screenshots from madoka magica rebellion" width="100%">
+					<img src="!g/madoka-rebellion/rebellion2.jpg" alt="screenshots from madoka magica rebellion" width="100%">
+					<img src="!g/madoka-rebellion/rebellion3.jpg" alt="screenshots from madoka magica rebellion" width="100%">
+					<img src="!g/madoka-rebellion/rebellion4.jpg" alt="screenshots from madoka magica rebellion" width="100%">
 					<p class="status">finished</p>
 				</div>
 			</div>
