hide listening log widget since i don't think i'll be doing them much!

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -79,11 +79,11 @@
    <p><b>01.sep.24</b> - updated featured song &amp; album</p>
   </div>
 
-  <div id="log" class="box">
+  <!-- <div id="log" class="box">
    <h3>latest log...</h3>
    <iframe src="listening-log/2024/fall.html" height="100%" width="100%" scrolling="no" name="listening-log"></iframe>
    <a title="click to open listening log and continue reading!" href="listening-log/2024/fall.html" target="_blank"></a>
-  </div>
+  </div> -->
 
   <div id="featured" class="box">
    <h3>featured song &amp; album</h3>
