--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -38,7 +38,7 @@
 		<center><img src="/!g/deco/jermamusic.gif"></center>
 
 		<h3>misc</h3>
-		<p>i run a <a title="currently a WIP!" href="https://siinamota.doqmeat.com/bot" target="_blank" class="outlink">siinamota fansite</a>, he is my favorite vocaloid producer and i highly recommend his stuff if you enjoy vocaloid. i also run the <a href="https://siinamota.doqmeat.com/bot" target="_blank" class="outlink">siinamota song bot</a> on twitter.</p>
+		<p>i run a <a title="currently a WIP!" href="https://siinamota.doqmeat.com/" target="_blank" class="outlink">siinamota fansite</a>, he is my favorite vocaloid producer and i highly recommend his stuff if you enjoy vocaloid. i also run the <a href="https://siinamota.doqmeat.com/bot" target="_blank" class="outlink">siinamota song bot</a> on twitter.</p>
 
 
 		<h3>important dates</h3>
