--- a/doqmeat/scrapbook/index.html
+++ b/doqmeat/scrapbook/index.html
@@ -23,12 +23,13 @@
 		<p>pages dedicated to my life throughout the year updated on a monthly basis!</p>
 
 		<ul>
+			<li><a href="2025/index.html">2025</a></li>
 			<li><a href="2024/index.html">2024</a></li>
 		</ul>
 	</div>
 
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/deco/paper-planes.gif" alt="link to homepage"></a></div>
-		<center><img src="/!g/div/heart-string.gif" alt="divider"></center>
+	<center><img src="/!g/div/heart-string.gif" alt="divider"></center>
 	<footer>
 		inspired by <a href="https://bisuko.neocities.org/scrapbooks/2023" target="_blank">bisuko</a> and <a href="https://strawberry-gashes.neocities.org/sb23" target="_blank">strawberry-gashes</a>!
 		<br>
