fixed typo in /reading

--- a/doqmeat/reading/index.html
+++ b/doqmeat/reading/index.html
@@ -39,7 +39,7 @@
 			<li>the guy she was interested in wasn't a guy at all -- (ongoing)
 				<details>
 					<summary></summary>
-					<p>very cute and fun manga to look it though it sure is dragging a lot...</p>
+					<p>very cute and fun manga to look at though it sure is dragging a lot... but you know what i'll let it slide. green yuri forever.</p>
 					<img src="!g/green-yuri/231022-shots (1).jpg" alt="the guy she was interested in wasn't a guy at all panels">
 					<img src="!g/green-yuri/231022-shots (2).jpg" alt="the guy she was interested in wasn't a guy at all panels">
 					<img src="!g/green-yuri/231022-shots (3).jpg" alt="the guy she was interested in wasn't a guy at all panels">
