minor updates to /vgs

--- a/doqmeat/vgs/games/bloodborne/index.html
+++ b/doqmeat/vgs/games/bloodborne/index.html
@@ -10,19 +10,7 @@
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function ($) {
-			$(document).ready(function () {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 </head>
 
@@ -74,6 +62,10 @@
 		<p><span class="date">14.sep.23</span><a title="journal log" href="/journal/2023/09#14" target="_blank">no more bloodborne til further notice</a></p>
 		<hr id="7">
 		<p><span class="date">11.dec.23</span> i don't know why i just thought about this but i think <i>if</i> i a bought a WIRED ps4 controller, i Would Be Able to play bloodborne again..... don't really feel like dropping 20 bucks just for that though. i really like the little messages people place in these games and if i play again i won't have that &lt;/3 so yeah i don't have much desire to buy that controller despite me missing the game! i thought about getting my ps4 fixed that first week it went nuts, but at that point i might as well just wait 5 years or something until i can afford a ps5. ahhhh <img src="/!g/pix/emote1pout.gif"></p>
+
+		<hr>
+
+		<p><span class="date">05.jan.25</span> the wired controller did not work. but you know what, eventually i will sent out my PS4 to get the wifi chip replaced. i wont give up!!!! i am hopeful for my 9 year old PS4! i am poor! and i want to keep playing bloodborne JLDFKJSDFJ</p>
 
 
 		<h4>reference links</h4>
