--- a/doqmeat/vgs/hardware/index.html
+++ b/doqmeat/vgs/hardware/index.html
@@ -41,7 +41,7 @@
   <p>i often call this my <b>indie machine</b> because that is mostly what i use it for, to play indie games.</p>
   <p>this is my first console that i bought with my hard earned retail money during april 2020. i remember i actually bought it and preordered <a href="acnh/index.html">animal crossing: new horizons</a> once it arrived. and my god was i hooked on that game. til i got sick of it of course.</p>
   <p>i also played some more... less indie games in here like <a href="fortnite/index.html">fortnite</a>, <i>minecraft</i>, <i>fall guys</i>, and <a href="splatoon-2/index.html">splatoon 2</a>. with <i>fortnite</i> being the reason as to why i had to open up my switch and replace the left joystick for a new one. <small>do not play fortnite. specially on the switch. its not worth it.</small></p>
-  <p>i think the switch is very nice if you want something that isnt like $500 and be able to play it on the go. though i do have to say that i should have waited a tiny bit to be able to afford the normal switch. despite the switch lite being for comfortable to play in its handheld mode, i think i would have appreciated a bit more the switch controllers and also the fact that you can play your games on a big tv. and also the usb port. i have a $100 taiko drum that i have to use with a USB-C DONGLE so i can play it with my switch lite.</p>
+  <p>i think the switch is very nice if you want something that isnt like $500 and be able to play it on the go. though i do have to say that i should have waited a tiny bit to be able to afford the normal switch. despite the switch lite being for comfortable to play in its handheld mode, i think i would have appreciated a bit more the switch controllers and also the fact that you can play your games on a big tv. and also the usb port. i have a $100 taiko drum that i have to use with a USB-C DONGLE so i can play it with my switch lite. ridiculous. i did this to myself.</p>
 
   <h2 id="ps4">PS4</h2>
   <!-- add pic of ps4! -->
@@ -49,6 +49,7 @@
   <p>ever since i saw this <a title="inFAMOUS Second Son -- Official Gameplay Spot" href="https://youtu.be/JhtU_sjQzjM" target="_blank" class="outlink">commercial</a> for the PS4, i've always wanted one. there was also that time when <a href="https://en.wikipedia.org/wiki/P.T._(video_game)" target="_blank" class="outlink">P.T.</a> came out and i was DYINGGGGG to play that demo but i never got to do that. L.</p>
   <p>i've always had an immense love for this console since it's the only thing i'm able to use those beefy AAA games i play every 2 years or so. though i did play <i>fallout 4</i> the most here. i believe reaching 260 hrs of gameplay.</p>
   <p>around july 2023 i started having wifi and blutooth problems. i replaced the antenna and that didn't fix it. meaning the problem was the chip attached to the motherboard <img src="/!g/pix/catfire.gif" alt=""> my PS4 is technically unusable because the dualshock 4 connects via bluetooth <u>ONLY</u> for some god damn reason??? it's really dumb and i hate it so much. the console turns on and everything just fine. i ordered an actual wired controller so i'll see if i can manage to use it with that. will update this once i figure this out. anyways, i just really wanna play <a href="bloodborne/index.html">bloodborne</a>.</p>
+  <p><u>05.jan.25 edit:</u> i did not get the wired controller to work. i will eventually sent out my PS4 to have it fixed by someone else.</p>
   <h2 id="wii-u">wii u</h2>
   <p>another christmas present but this time of 2015 (another thank you dad, we love you dad) BUT i actually did contribute a bit of the budget for this console. i had saved up $100 for it and agreed with my dad to let him buy me the console in exchange for the money i had saved up for it. i was saving up for this console because i really wanted <i>mario kart 8</i>. for some god damn reason.</p>
   <p>he got me the wii u that came bundled with <i>super mario 3D world</i> and my GOD was that game so great. such a blast. the wii u was such a great console to me and my sister. i had a lot of fun playing games like <i>super mario 3D world</i> and <i>donkey kong country: tropical freeze</i> with her and it's honestly one of my highlights for this console.</p>
@@ -57,7 +58,7 @@
   <p>but at least she didn't give away my wii u. just like my <a href="#3ds">3DS</a>, i hacked my wii u on june 2024. been playing some games like <i>my sims</i> and <i>yoshi's woolly world</i> which were games i've always wanted to play but never bothered to get them.</p>
   <p><b>useful links:</b> <a href="https://wiiu.hacks.guide/" target="_blank">wii u modding guide</a>, <a href="https://wii.hacks.guide/vwii-homebrew-channel.html" target="_blank">virtual wii modding guide</a></p>
   <hr>
-  <b>last updated on: 19.dec.24</b>
+  <b>last updated on: 05.jan.25</b>
  </main>
 
  <footer>
