added the frame link script to journal (i forgor?)

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -22,6 +22,10 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
+	<script src="https://melonking.net/scripts/frame-link.js"></script>
+	<script>
+		titlePrefix = "journal 📝 ";
+	</script>
 </head>
 
 <body>
