nothing burger fixes to vgs

--- a/doqmeat/vgs/games/bloodborne/index.html
+++ b/doqmeat/vgs/games/bloodborne/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-	<div id="iframepc">
+	<main>
 
 		<h2>bloodborne</h2>
 
@@ -87,7 +87,7 @@
 		<p>this has been the funniest death i've had since playing this game <sub>[16.jul.23]</sub>
 
 
-	</div>
+	</main>
 
 	<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
 
