new microblog post + yearly script

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -31,18 +31,25 @@
 		<div id="address-bar">← → ↻ <button onclick="goHome()">⌂</button><span id="address">https://doqmeat.com/microblog</span></div>
 
 		<div id="blog">
+			<!-- homepage section -->
 			<section id="home">
 				<p>choose the year you want to view!</p>
 				<!-- <button onclick="goToYear('y2025')">
 					<img src="" alt="2025 button thumbnail"> 2025</button> -->
+				<button onclick="goToYear('y2025')">
+					<span class="year">2025</span>
+					<br>
+					<span id="logs2025">total logs: </span></button>
+
 				<button onclick="goToYear('y2024')">
 					<span class="year">2024</span>
 					<img src="!g/241117-steve.jpeg" alt="2024 button thumbnail">
 					<br>
 					<span id="logs2024">total logs: </span></button>
 			</section>
+			<!-- 2025 section -->
 			<section id="y2025">
-				<article>hi this is the 2025 section. you're a bit early to the party...</article>
+				<article><b>06.jan.25 - 3pm</b> might do another rework of my homepage + the music index too. for my homepage, it feels a bit cluttered tbh and there's just some sections that i don't really use or are a bit unnecesary. i would also like to decorate it a bit more. we will see.</article>
 			</section>
 			<section id="y2024">
 				<article id="241227">
