added some new graphics

--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -116,14 +116,16 @@
 			<a href="https://lu.tiny-universes.net/" target="_blank"><img src="!g/lu.tiny-makeyourown.png"></a>
 			<img src="!g/sillayyyyy.png">
 			<img src="!g/oldelectronics.png" alt="old electronics">
+			<img src="!g/loona1.gif" alt="loona group">
+			<img src="!g/seal.gif" alt="silly seal">
 			<img src="!g/mario10.gif">
 			<img src="!g/beelieve.png">
 			<img src="!g/meow.jpg">
 			<img src="!g/birchforestconceptart.png">
 			<img src="!g/mobfighton.gif" alt="mob fight on!">
 			<img src="!g/i-still-buy-cds.png" alt="i still buy CDs">
-			<img src="!g/seal.gif" alt="silly seal">
 			<img src="!g/nightowl.gif">
+			<img src="!g/jerm-dollhouse.gif" alt="jerma dollhouse">
 			<img src="!g/cat2.gif"><a href="https://www.deviantart.com/tradt-production/art/GH-Warrior-Pandora-416079617" target="_blank">
 				<img src="!g/pandora.png"></a>
 			<img src="!g/catirl.gif">
@@ -232,6 +234,7 @@
 			<img src="!g/bookmark.gif">
 			<a href="https://wynns-wonderful-pixel-paradise.neocities.org/buttons"><img src="!g/dontfeedai.gif"></a>
 			<img src="!g/miku.gif">
+			<img src="!g/miku1.gif" alt="miku gif">
 			<img src="!g/vocaloid-now.gif" alt="vocaloid now">
 			<img src="!g/cinna.gif">
 			<a herf="https://rainy.gay/other/buttons"><img src="!g/void.png"></a>
@@ -278,7 +281,8 @@
 		<h2 id="5" class="title">other</h2>
 		<div id="other" class="container">
 			<img src="!g/blinkychoco.gif">
-			<img src="/!g/deco/nice" <img src="!g/borntodie.png">
+			<img src="!g/plsbnice.png" alt="please be nice to me">
+			<img src="!g/borntodie.png">
 			<img src="!g/unseen.png">
 		</div>
 
