less bloat on homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -79,20 +79,17 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="intro" class="box">
 			<img title="meow" class="mc-cat" alt="minecraft cat plushie" width="33%" align="right">
-			<p>hello! my name is <b>des</b>, and i'm the person behind this site! just like everyone always says, this is my <u>own</u> little corner of the internet. i use this space for just about anything. though i mostly use it as a <b>digital journal, of both my personal life and interests</b>.</p>
+			<p>hello! my name is <b>des</b>, and this right here is my very <u>own</u> corner of the internet dedicated to the things that i love. i mostly use it as a <b>digital journal, of both my personal life and interests</b>.</p>
 			<center>
 				<a href="https://user.xmission.com/~emailbox/catstuff.htm" title="img source!"><img src="/collection/internet-graphics/!g/timecat.png" alt="button that reads 'no time spent with a cat is wasted'" width="30%"></a>
 				<img src="/collection/internet-graphics/!g/borntodie.png" width="40%" alt="button that reads 'BORN TO DIE, WORLD IS A FUCK, Kill Em All 1989, This user is a trash man, 410,757,864,530 DEAD COPS'">
 			</center>
-			<p>starting as <i>doqmeat.neocities.org</i> in april 2023, i made this website purely just out of curiosity
-				and boredom but it eventually turn out to be something i immensely care about. this is 100% a passion
-				project of mine about self expression. welcome to my internet home!</p>
+			<p><i>doqmeat.com</i> is 100% a passion project about self expression. <b>this site is for myself first</b>, though i don't mind sharing it with the world wide web! which is why i am committed to making it as responsive and accessible to the best of my abilities.</p>
 			<h4>quick notes about site:</h4>
 			<ul>
 				<li>uses javascript and iframes. for fun stuff and site functionality.</li>
 				<li>there is <u>no</u> explicit content on my site but keep in mind it is made by an adult with an adult
 					audience in mind.</li>
-				<li>i try to make most of my pages responsive to different screen sizes and mobile, though the <b>intended viewing size is 1080px on desktop</b>.</li>
 				<li>i update my site a lot. hit that CTRL + F5 if something looks wonky. if that doesn't fix it feel
 					free to e-mail me.</li>
 				<li>yes, my domain is a reference to fallout's <a title="fallout wiki" href="https://fallout.wiki/wiki/Dogmeat" target="_blank">dogmeat</a>! despite being a huge cat person, i love that dog.</li>
@@ -129,27 +126,28 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">working on:</span> not much!</p>
 			<p class="date">last updated on 02.jan.25</p>
 		</div>
-
+		<!-- 
 		<div id="featured-page" class="box">
 			<h2>featured page</h2>
 			<a title="click to go to my fashion page!" href="/fashion"><img src="!g/fashion.jpg" alt="featured page" width="100%"></a>
-		</div>
+		</div> -->
 
 		<div id="piclog" class="box">
 			<h2>piclog</h2>
 			<a href="https://piclog.blue/profile.php?id=51" title="my piclog profile!" target="_blank"><img src="https://piclog.blue/latest.php?id=51" width="90%"></a>
 		</div>
 
-		<div id="featured-cat" class="box">
+		<!-- <div id="featured-cat" class="box">
 			<h2>featured cat</h2>
 			<a href="/collection/cats" title="click to see more freaks"><img src="/collection/cats/!g/jolly-cat.gif" alt="featured cat" width="80%"></a>
-		</div>
+		</div> -->
 
 
 		<div id="outro" class="box">
 			<h2>bye bye</h2>
 			<p>i hope you have fun browsing my website :3</p>
-			<p>you can leave a message about your visit (or about anything really! i usually reply) on my <a href="/guestbook">guestbook</a>, the chatbox, or even send me an <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">e-mail</a> if you'd like! go crazy.</p>
+			<p>you can leave a message about your visit on my <a href="/guestbook">guestbook</a>, the chatbox, or even send me an <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">e-mail</a> if you'd like! go crazy. just be nice.</p>
+
 			<p>want to link back to me? here are some of my buttons! i would prefer if you didn't <a href="https://awesomelytechie.com/dont-hotlink/" target="_blank">hotlink</a> please! save to your own server.</p>
 			<center>
 				<img src="!g/web/doqmeat.png" alt="button">
@@ -158,6 +156,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p>if you want to explore more personal sites beyond doqmeat.com, check out my <a href="/sites">button
 					wall</a> with tons of buttons from my neighbors and just overall sites that i enjoy visiting.</p>
 			<p>take care and come visit again someday (^・ω・^ )</p>
+			<center><img src="https://doqmeat.com/!g/deco/goodnight.gif" alt="cat that says goodnight" style="max-width: 100%;"></center>
 		</div>
 
 		<div id="comm" class="box">
