new logs for kirby and styling star

--- a/doqmeat/vgs/games/style-savvy-styling-star/index.html
+++ b/doqmeat/vgs/games/style-savvy-styling-star/index.html
@@ -46,6 +46,13 @@
 		<div class="info"><b>genre/type: </b> fashion, simulator</div>
 
 		<h3>logs</h3>
+		<p><span class="date">07.jan.25</span> i honestly don't really know what all my bitching was about. new year, new me. learning to forgive and love. been trying to collect all clothing items from <i>stagedive</i> in all 4 games (yes i'm also playing the DS <i>style savvy</i> game <small>need to figure out where the fuck the screenshots from the NDS emulator are located...</small>)</p>
+		<center>
+			<img src="250107 (3).JPG" alt="in-game screenshot" style="max-width:100%;">
+			<img src="250107 (2).JPG" alt="in-game screenshot" style="max-width:100%;">
+			<img src="250107 (1).JPG" alt="in-game screenshot" style="max-width:100%;">
+		</center>
+		<hr>
 		<p><span class="date">24.dec.24</span> okay, having started <a href="../style-savvy-fashion-forward/index.html">fashion forward</a> i still think this game looks a bit uglier... but this is looking to be the most interesting storyline out of all 3 games. and i do hate to admit it! but despite finding the gameplay pase a bit slow compared to the other games, <i>styling star</i> also <b>probably</b> might have the best request system too. since there is a lot of plot related request that make the game and the NPC in there a bit more alive! i'm so sorry for being so mean to you, <i>styling star</i>, i had to play <a href="../style-savvy-fashion-forward/index.html">fashion forward</a> in order to really see your beauty.</p>
 		<hr>
 		<p><span class="date">29.nov.24</span> i've been still playing this game every once in a while but there is still something about it that makes me not love it as much as <i>trendsetters</i> despite having so many improvements in its gameplay. i have no clue why this game looks worse than trendsetters, given that game released on 2012 and this one in 2017. <i>styling star</i> looks very blocky, pixelated. maybe this was due to time constraints or something??? because we also have to keep in mind that this released at the very end of the <b>3DS</b>' life. but i don't know man. i feel like trendsetters has a very specific aesthetic and charm to it. i guess in a way styling star feels and looks cheaper to me.</p>
