--- a/doqmeat/vgs/games/kirby-planet-robobot/index.html
+++ b/doqmeat/vgs/games/kirby-planet-robobot/index.html
@@ -23,9 +23,30 @@
   <div class="info"><b>developer: </b> HAL laboratory</div>
   <div class="info"><b>genre/type: </b> platformer</div>
   <h3>logs</h3>
+  <p><span class="date">07.jan.25</span> at the final boss for this game though hes lowkey beating my ass???? I WILL BEAT THIS BABY GAME BOSS.</p>
+  <figure>
+   <img src="icecream.bmp">
+   <figcaption>i would eat the ice cream</figcaption>
+  </figure>
+  <figure>
+   <img src="shots (1).bmp" style="max-width:100%;">
+   <figcaption>is that a fucking cat sleeping? what is that creature</figcaption>
+  </figure>
+  <figure>
+   <img src="shots (2).bmp" style="max-width:100%;">
+   <figcaption>the design of this level fucking RULED</figcaption>
+  </figure>
+  <figure>
+   <img src="shots (3).bmp" style="max-width:100%;">
+   <figcaption>coolest baby</figcaption>
+  </figure>
+  <hr>
   <p><span class="date">20.dec.24</span>been playing this for the past month! i find it super adorable. while the gameplay itself might be easy, there's always a little bit of extra challenge if you want to collect all of the cubes! this is my first ever kirby game so i'm kinda having a blast. also i love how the 3D effects are used in this game as well.</p>
   <center>
-   <img src="kirby (1).bmp" style="max-width:100%;" alt="in-game screenshots">
+   <figure>
+    <img src="kirby (1).bmp" style="max-width:100%;" alt="in-game screenshots">
+    <figcaption>the little dance at the end of levels never fails to heal me</figcaption>
+   </figure>
    <img src="kirby (2).bmp" style="max-width:100%;" alt="in-game screenshots">
    <img src="kirby (3).bmp" style="max-width:100%;" alt="in-game screenshots">
    <figure><img src="kirby (4).bmp" style="max-width:100%;" alt="in-game screenshots">
