fixed dead link for style savvy + typo

--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -23,9 +23,9 @@
  <main>
   <div id="intro">
    <h1>fashion</h1>
-   <p>fashion has been one of my favorite things for <b>expressing myself</b>. as of recently, i've been feeling more comfortable with my body and what i like to wear. i've gotten the chance to wear more and more things that i previously was scared to wear. i love playing around with my looks and my wardrobe, which is probably why i love dress-up games such as the <a title="gaming log for style savvy trendsetters" href="/vgs/style-savvy-trendsetters/">style savvy</a> series and i'm also obsessed with doing <b>picrews</b> of myself whenever i can. nothing gives me as much joy as being able to unabashedly express myself through clothing. it has been a very fun experience for me to be able to explore what i like to wear!</p>
+   <p>fashion has been one of my favorite things for <b>expressing myself</b>. as of recently, i've been feeling more comfortable with my body and what i like to wear. i've gotten the chance to wear more and more things that i previously was scared to wear. i love playing around with my looks and my wardrobe, which is probably why i love dress-up games such as the <a title="gaming log for style savvy trendsetters" href="/vgs/games/style-savvy-trendsetters/index.html">style savvy</a> series and i'm also obsessed with doing <b>picrews</b> of myself whenever i can. nothing gives me as much joy as being able to unabashedly express myself through clothing. it has been a very fun experience for me to be able to explore what i like to wear!</p>
    <p>if you asked me to describe my style... i really don't know what i would tell you! my style varies heavily. i like wearing darker colors as well as lighter ones. while most of my wardrobe is very feminine, i also enjoy dressing up a bit more masculine at times. i guess at the moment i am just exploring things out! it just really depends on my mood the night before :3 which is when i'm picking my outfits out.</p>
-   <p>this page will contain an outfits of mine that i enjoy wearing! i will also feature pics of my favorite accessories / items.</p>
+   <p>this page will contain outfits of mine that i enjoy wearing! i will also feature pics of my favorite accessories / items.</p>
   </div>
   <div class="gallery">
    <h2>outfits</h2>
