updated currently on homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -119,29 +119,18 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> fallout new vegas, kirby planet robobot</p>
-			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
+			<p><span class="hl">playing:</span> <a href="/vgs/games/kirby-planet-robobot/index.html">kirby planet robobot</a>, <a href="/vgs/games/fallout-new-vegas/index.html">fallout new vegas</a>, the style savvy 3DS games</p>
+			<p><span class="hl">reading:</span> <i>puella magi madoka magica: wraith arc</i></p>
 			<p><span class="hl">watching:</span> beastars (final season)</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> not much!</p>
-			<p class="date">last updated on 02.jan.25</p>
+			<p><span class="hl">working on:</span> enjoying my free time til classes start.</p>
+			<p class="date">last updated on 08.jan.25</p>
 		</div>
-		<!-- 
-		<div id="featured-page" class="box">
-			<h2>featured page</h2>
-			<a title="click to go to my fashion page!" href="/fashion"><img src="!g/fashion.jpg" alt="featured page" width="100%"></a>
-		</div> -->
 
 		<div id="piclog" class="box">
 			<h2>piclog</h2>
 			<a href="https://piclog.blue/profile.php?id=51" title="my piclog profile!" target="_blank"><img src="https://piclog.blue/latest.php?id=51" width="90%"></a>
 		</div>
-
-		<!-- <div id="featured-cat" class="box">
-			<h2>featured cat</h2>
-			<a href="/collection/cats" title="click to see more freaks"><img src="/collection/cats/!g/jolly-cat.gif" alt="featured cat" width="80%"></a>
-		</div> -->
-
 
 		<div id="outro" class="box">
 			<h2>bye bye</h2>
